[project]
name = "ai-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Ludovic Blervaque Brient",email = "ludovic.blervaque@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "langchain-singlestore (>=1.0.0,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ai_rag", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
